fix:backport layout issues list table in card mode

--- a/Frontend/src/app/common/ui/list-table/list-table.component.scss
+++ b/Frontend/src/app/common/ui/list-table/list-table.component.scss
@@ -308,8 +308,7 @@ $badgeWidth:250px;
   }
 
 }
-.tableList.collection-item:not(.nodeCollection) .row.selected,
-.cardList.collection-item:not(.nodeCollection) .row.selected{
+.tableList.collection-item:not(.nodeCollection) .row.selected{
   background: $workspaceSelectedBackgroundEffect;
   background-color:$workspaceSelectedBackground;
   .more{
@@ -365,7 +364,7 @@ $badgeWidth:250px;
 .list .nodeCollection .row {
   background-color: transparent;
   &:focus{
-    outline: 2px dashed $primary;
+    @include setGlobalDashedFocus();
   }
 }
 
